buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'org.owasp:dependency-check-gradle:5.2.2'
    }
}

plugins {
    // Supports functionality similar to Maven BOM.
    // Helps to avoid re-declaring dependency version in each subproject.
    // See https://github.com/spring-gradle-plugins/dependency-management-plugin
    id "io.spring.dependency-management" version '1.1.7'
    id "de.undercouch.download" version '5.1.0'
    id "com.github.spotbugs" version '5.0.14' apply false
}

// To enable JavaDoc generation add Gradle property to command line:
// -PincludeJavaDocs
def includeJavaDocs = hasProperty("includeJavaDocs")

// Spotbugs
def enableSpotbugs = hasProperty("spotbugs") || Boolean.getBoolean("spotbugs") || Boolean.parseBoolean(System.getenv('SPOTBUGS'))
if (enableSpotbugs) {
    println("Spotbugs is ENABLED")
}

// We don't want to apply plugins and build artifacts for non-leaf (grouping) projects.
// So we create a list of leaf projects and apply all java-related plugins on them only.
def leafProjects = subprojects.findAll { subproject ->
    subproject.subprojects.empty
}
ext.leafProjects = leafProjects // Publish as external variable

ext {
    sonaUser = findProperty('SONATYPE_NEXUS_USERNAME') ?:  System.getenv('SONATYPE_NEXUS_USERNAME') ?: "FakeUser"
    sonaPass = findProperty('SONATYPE_NEXUS_PASSWORD') ?:  System.getenv('SONATYPE_NEXUS_PASSWORD') ?: "FakePass"

    testTags = null // Default test tags
}

// Default test categories
ext.categories = 'Unit'

configure(leafProjects) {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: "com.github.spotbugs" // Static analysis
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'signing'

    // --- JAVA 11 version ---
    //--add-exports <module>/<module>/<package>=<target-module>(,<target-module>)*

    compileJava {
        options.warnings = true
        options.deprecation = false
        options.encoding = 'UTF-8'
        options.compilerArgs += ["--add-exports=java.base/sun.nio.ch=ALL-UNNAMED", "--add-exports=java.base/sun.nio=ALL-UNNAMED"]
    }
    java {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
    }

    // Defines versions of dependencies to be used by subprojects
    // https://github.com/spring-gradle-plugins/dependency-management-plugin#dependency-management-dsl
    dependencyManagement {
        imports {
            mavenBom 'org.junit:junit-bom:5.14.0'
        }
        dependencies {
            dependency ('com.epam.deltix:thread-affinity:1.0.4')
            dependency 'org.apache.commons:commons-lang3:3.7'
            dependency 'org.apache.commons:commons-compress:1.26.1'
            dependency 'commons-collections:commons-collections:3.2.2'
            dependency 'javax.mail:mail:1.4.7'
            dependency 'com.google.code.findbugs:jsr305:3.0.2'
            dependency 'com.google.code.findbugs:annotations:3.0.1'

            dependency 'org.jetbrains:annotations:26.0.2'

            dependency "com.epam.deltix:dfp:$dfpVersion"
            dependency "com.epam.deltix:hd-date-time:$hdTimeVersion"
            dependency 'com.epam.deltix:containers:3.1.2'

            dependencySet (group: 'com.epam.deltix', version: gflogVersion) {
                entry 'gflog-api'
                entry 'gflog-core'
                entry 'gflog-jul'
                entry 'gflog-dcl'
                entry 'gflog-slf4j'
            }

            // JMH
            dependencySet(group: 'org.openjdk.jmh', version: '1.37') {
                entry 'jmh-core'
                entry 'jmh-generator-annprocess'
            }

            dependency "junit:junit:4.13.2"
            dependency "org.mockito:mockito-core:5.15.2"

//            dependency 'com.google.guava:guava:32.0.1-jre'

//            dependency 'org.hdrhistogram:HdrHistogram:2.1.12'
        }
    }

    ext {
        vendor = 'EPAM'
        isReleaseVersion = !version.endsWith("SNAPSHOT")
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        compileOnly 'com.google.code.findbugs:jsr305'
        compileOnly 'com.google.code.findbugs:annotations'

        testCompileOnly 'junit:junit'

        testImplementation "org.mockito:mockito-core"

        testImplementation 'org.junit.jupiter:junit-jupiter-api'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

//        testRuntimeOnly 'com.epam.deltix:gflog-core'

        spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.9.0'
    }

    test {
        useJUnitPlatform {
            if (testTags != null) {
                setIncludeTags testTags.split(',') as Set
            }
        }

        // sync logging to not mix up messages from different tests
        jvmArgs '-Dgflog.sync=true', '-Dgflog.console.appender.wrap=true', '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
    }

    tasks.withType(Test).configureEach {
        testLogging {
            // Log events to the console
            events "standardOut", "started", "passed", "skipped", "failed"

            // Show standard streams (System.out and System.err)
            showStandardStreams = true

            // Set the exception format (e.g., 'full', 'short', 'none')
            exceptionFormat = 'full'

            // Show stack traces
            showStackTraces = true
        }
    }

    spotbugs {
        toolVersion = "4.7.3"
        effort = "max"
        reportLevel = "medium"
        excludeFilter = rootProject.file('spotbugs-excludes.xml')
    }

    tasks.named('spotbugsTest') {
        enabled = false // disable SpotBugs for tests
    }

    tasks.withType(com.github.spotbugs.snom.SpotBugsTask).configureEach {
        enabled = enableSpotbugs

        reports {
            xml.required = false
            html.required = true
        }
    }

    tasks.named('jar') {
        manifest {
            archiveBaseName.set(base.archivesName)
            attributes 'Manifest-Version': "1.0",
                    'Created-By': vendor,
                    'Implementation-Vendor': vendor,
                    'Implementation-Version': archiveVersion
        }
    }

    tasks.named('processResources') {
        from sourceSets.main.java.srcDirs
        exclude '**/*.java'
        includeEmptyDirs = false
    }

    tasks.named('processTestResources') {
        from sourceSets.test.java.srcDirs
        exclude '**/*.java'
        includeEmptyDirs = false
    }

    tasks.named('jar') {
        manifest.attributes(
                'Class-Path': provider {
                    configurations.runtimeClasspath.collect { it.name }.join(' ')
                }
        )
    }

    // Contains current project jar and all required dependencies for that project
    def allJarsPath = 'build/alljars'

    tasks.register('gatherProjectDependencies', Sync) {
        description = 'Copies all project runtime dependencies to ' + allJarsPath
        from project.configurations.runtimeClasspath
        into allJarsPath
    }

    tasks.register('gatherAllJarsWithDependencies', Copy) {
        dependsOn 'jar', 'gatherProjectDependencies'
        group = "build"
        description = 'Copies all project JAR and all its runtime dependencies to ' + allJarsPath
        from tasks.named('jar') // Main produced JAR of the subproject
        into allJarsPath
    }

    def allTestJarsPath = 'build/alltestjars'

    tasks.register('gatherProjectTestDependencies', Sync) {
        group = 'debug'
        description = 'Copies all project test dependencies to ' + allTestJarsPath
        from project.configurations.testRuntimeClasspath
        into allTestJarsPath
    }

    tasks.register('generateTestJar', Jar) {
        group = 'debug'
        description = 'Generates JAR with test classes'
        archiveClassifier = 'tests'
        from sourceSets.test.output
    }

    tasks.register('gatherAllTestJarsWithDependencies', Copy) {
        dependsOn 'jar', 'generateTestJar', 'gatherProjectTestDependencies'
        group = 'debug'
        description = 'Copies all project JAR and all it\'s test dependencies to ' + allTestJarsPath
        from tasks.named('jar') // Main produced JAR of the subproject
        from tasks.named('generateTestJar') // JAR with test classes

        into allTestJarsPath
    }


    var sourcesJar = tasks.register('sourcesJar', Jar) {
        dependsOn 'classes'
        archiveClassifier.set('sources')
        archiveBaseName.set(base.archivesName)
        from sourceSets.main.allSource
    }

    var javadocJar = tasks.register('javadocJar', Jar) {
        dependsOn 'javadoc'
        enabled = includeJavaDocs
        archiveClassifier.set('javadoc')
        archiveBaseName.set(base.archivesName)
        from javadoc.destinationDir
    }

//    task luminaryJar(type: Jar) {
//        classifier = 'luminary'
//        from("$projectDir/schema") {
//            include "*.json"
//            include "**/*.lux"
//        }
//    }

    tasks.withType(Javadoc).configureEach {
        options.addStringOption('Xdoclint:all,-reference', '-quiet') //  disables fail on missing JavaDoc reference
        //options.addStringOption('Xdoclint:none', '-quiet') // suppress all warnings
    }

    artifacts {
        archives sourcesJar
        if (includeJavaDocs) {
            archives javadocJar
        }
    }

    def rUser = findProperty('SONATYPE_NEXUS_USERNAME') ?:  System.getenv('SONATYPE_NEXUS_USERNAME') ?: "FakeUser"
    def rPass = findProperty('SONATYPE_NEXUS_PASSWORD') ?:  System.getenv('SONATYPE_NEXUS_PASSWORD') ?: "FakePass"

    // Publishing
    publishing {
        repositories {
            maven {
                url = findProperty('SONATYPE_REPOSITORY') ?:  System.getenv('SONATYPE_REPOSITORY') ?: "FakeRepo"

                credentials {
                    username rUser
                    password rPass
                }
            }
        }

        publications {
            mavenJava(MavenPublication) {
                from components.java

                pom {
                    name = project.name
                    packaging = 'jar'
                    description = 'Timebase Common utilities and collections'
                    url = 'https://github.com/epam/TimeBaseCommons.git'

                    scm {
                        connection = 'scm:git:https://github.com/epam/TimeBaseCommons.git'
                        developerConnection = 'scm:git:https://github.com/epam/TimeBaseCommons.git'
                        url = 'https://github.com/epam/TimeBaseCommons.git'
                    }

                    licenses {
                        license {
                            name = 'The Apache License, Version 2.0'
                            url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
                        }
                    }

                    developers {
                        developer {
                            id = 'alex-karpovich'
                            name = 'Alexander Karpovich'
                            email = 'aliaksandr_karpovich@epam.com'
                            url = 'https://github.com/alex-karpovich'
                            organization = 'EPAM Systems'
                            organizationUrl = 'https://www.epam.com/'
                        }
                    }
                }
            }
        }
    }

    if (!includeJavaDocs) {
        tasks.withType(Javadoc).configureEach { enabled = false }
    }

    signing {
        def signingKey = findProperty('SIGNING_PRIVATE_KEY') ?: System.getenv('SIGNING_PRIVATE_KEY') ?: "FakeUser"
        def signingPassword = findProperty('SIGNING_PASSWORD') ?: System.getenv('SIGNING_PASSWORD') ?: "FakePass"

        useInMemoryPgpKeys(signingKey, signingPassword)
        sign publishing.publications.mavenJava

        required { isReleaseVersion }
    }
}

task publishAll(dependsOn: leafProjects.collect { it.path + ":publish" }) {
    group 'publishing'
    description 'Publish All Artifacts'
}

tasks.register('uploadArtifactsToCentralPortal', com.epam.deltix.buildsrc.SonatypeCentralPortalUploadRepositoryTask) {
    portalUsername.set(sonaUser)
    portalPassword.set(sonaPass)
    groupId.set('com.epam.deltix')
    snapshotRelease.set(false)
}

allprojects {
    // See http://jeremylong.github.io/DependencyCheck/dependency-check-gradle
    apply plugin: 'org.owasp.dependencycheck'

    dependencyCheck {
        // skipProjects = nonJavaProjects
        failBuildOnCVSS = 7
        suppressionFile = "$rootDir/dependency-check-suppression-file.xml"
        analyzers {
            assemblyEnabled = false
        }
    }
}

def testTasks = ext.leafProjects*.test

tasks.register('generateTestReport', TestReport) {
    group = 'verification'
    reportOn testTasks
    destinationDirectory.set(file("$rootDir/build/reports/junit/html/all_reports_merged")) // TODO: Pick better name for merged report
}
